    values in readString() implementation (ORCJAVA-326)
  - Telnet log configuration (ORCJAVA-328)
  - The controller build script does not mandate an explicit character
    encoding for all Java compiler tasks. This causes issues on some
    systems with incompatible default character set/locale. This patch
    enforces UTF-8 encoding on all compiled source files. (ORCJAVA-329)

Controller Pro 1.0.8
====================

New Features:

  - Marantz AVR protocol improvements (ORCJAVA-310)
  - Create protocol support for Vera (ORCJAVA-300)

Bug Fixes:

  - openremote.sh script must write correct pid to file if CATALINA_PID is specified (ORCJAVA-311)
  - Change controller to connect to local lagarto-max through port 5002 (ORCJAVA-321)

Controller Pro 1.0.7
====================

New Features:

  - Support Marantz receivers / pre-pro IP control (ORCJAVA-244)

Controller Pro 1.0.6
====================

New Features:

  - Introduce unit tests for Version20ModelBuilder class and regression tests for issue ORCJAVA-263 (ORCJAVA-286)

Bug Fixes:

  - KNX does not return scene numbers sent by a physical push button, SCENE and LEARN_SCENE seem to vica versa (ORCJAVA-282)
  - The ColorPickerBuilder from ORCJAVA-235 is using the wrong attribute name for the dynamic attribute (ORCJAVA-290)
  - openremote.sh start creates an unbound catalina.out file (ORCJAVA-273)
  - Fix openremote.sh to work with paths that contain spaces (ORCJAVA-280)
  - Controller Error occurs when there are spaces in the path (ORCJAVA-263)
  - NPE when controller checking for commands from remote proxy (ORCJAVA-288)
  - Ensure that Restlet ClientResource is not released too soon (ORCJAVA-295)

Controller 2.1.0 (2012-XX-XX Twin Galaxies)
===========================================

New Features:

  - Added DSC-IT 100 Security System integration (IP to serial), Greg Rapp
  - Lagarto server (panStamps) integration, Daniel Berenguer
  - Support 'custom' sensor types with virtual commands (ORCJAVA-217)